@@ -1,27 +1,34 @@
 package com.dev.tiago.fullstack_app.backend.service.impl;
 
-import com.dev.tiago.fullstack_app.backend.entity.User;
+import com.dev.tiago.fullstack_app.backend.dto.UserDto;
+import com.dev.tiago.fullstack_app.backend.dto.mapper.UserMapper;
+import com.dev.tiago.fullstack_app.backend.enums.UserRole;
 import com.dev.tiago.fullstack_app.backend.repository.UserRepository;
 import com.dev.tiago.fullstack_app.backend.service.UserService;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     @Override
-    public List<User> getUsers() {
-        return userRepository.findByUserRole("ADMIN").stream().toList();
+    public List<UserDto> getUsers() {
+        return userRepository.findAll()
+                .stream()
+                .filter(user -> user.getUserRole() == UserRole.EMPLOYEE)
+                .map(userMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public User getById(Long id) {
-        return userRepository.findById(id).orElseThrow();
+    public UserDto getById(Long id) {
+        return userRepository.findById(id).map(userMapper::toDto).orElseThrow();
     }
 }
